Organização da pasta imagens e alteração de caminhos

--- a/projeto_site/index.html
+++ b/projeto_site/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-md bg-menu shadow">
             <div class="container-fluid">
                 <a class="navbar-brand color-text" href="index.html">
-                    <img src="/imagens/logo2.png" alt="logo" width="50" height="45" class="d-inline-block">
+                    <img src="imagens/logo2.png" alt="logo" width="50" height="45" class="d-inline-block">
                     JobTeens
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -124,7 +124,7 @@
                             <div class="card mt-4 my-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="/imagens/img_card_home_TI.jpg" class="card-img" alt="TI">
+                                        <img src="imagens/img_card_home_TI.jpg" class="card-img" alt="TI">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -139,7 +139,7 @@
                             <div class="card my-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="/imagens/img_card_home_adm.jpg" class="card-img" alt="administração">
+                                        <img src="imagens/img_card_home_adm.jpg" class="card-img" alt="administração">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -154,7 +154,7 @@
                             <div class="card my-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="/imagens/img_card_home_comercio.jpg" class="card-img" alt="comércio-vendas">
+                                        <img src="imagens/img_card_home_comercio.jpg" class="card-img" alt="comércio-vendas">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -250,22 +250,22 @@
                     <h1 class="mb-5">Nosso Time</h1>
                     <div class="row">
                         <div class="col-md-3">
-                            <img src="/imagens/img_nossotime_man3.jpg" alt="John Tarly" class="bd-placeholder-img rounded-circle" width="150" height="150">
+                            <img src="imagens/img_nossotime_man3.jpg" alt="John Tarly" class="bd-placeholder-img rounded-circle" width="150" height="150">
                             <h4>John Tarly</h4>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         </div>
                         <div class="col-md-3">
-                            <img src="/imagens/img_nossotime_man2.jpg" alt="Tom Sunderland" class="bd-placeholder-img rounded-circle" width="150" height="150">
+                            <img src="imagens/img_nossotime_man2.jpg" alt="Tom Sunderland" class="bd-placeholder-img rounded-circle" width="150" height="150">
                             <h4>Tom Sunderland</h4>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         </div>
                         <div class="col-md-3">
-                            <img src="/imagens/img_nossotime_man1.jpg" alt="Samuel Hardy" class="bd-placeholder-img rounded-circle" width="150" height="150">
+                            <img src="imagens/img_nossotime_man1.jpg" alt="Samuel Hardy" class="bd-placeholder-img rounded-circle" width="150" height="150">
                             <h4>Samuel Hardy</h4>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         </div>
                         <div class="col-md-3">
-                            <img src="/imagens/img_nossotime_woman.jpg" alt="Manuella Nevoresky" class="bd-placeholder-img rounded-circle" width="150" height="150">
+                            <img src="imagens/img_nossotime_woman.jpg" alt="Manuella Nevoresky" class="bd-placeholder-img rounded-circle" width="150" height="150">
                             <h4>Manuella Nevoresky</h4>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         </div>
