--- a/projeto_site/login.html
+++ b/projeto_site/login.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-md bg-menu shadow">
             <div class="container-fluid">
                 <a class="navbar-brand color-text" href="index.html">
-                    <img src="/imagens/logo2.png" alt="logo" width="50" height="45" class="d-inline-block">
+                    <img src="imagens/logo2.png" alt="logo" width="50" height="45" class="d-inline-block">
                     JobTeens
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -59,7 +59,7 @@
                     </div>
                     <div class="col-md-6 py-5">
                         <div class="pb-3 text-center">
-                            <img src="/imagens/logo2.png" alt="logo" class="logo">
+                            <img src="imagens/logo2.png" alt="logo" class="logo">
                             <h3>JobTeens</h3>
                             <br>
                             <h5>Acesse sua conta</h5>
