--- a/projeto_site/projetos_cursos.html
+++ b/projeto_site/projetos_cursos.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-md bg-menu shadow">
             <div class="container-fluid">
                 <a class="navbar-brand color-text" href="index.html">
-                    <img src="/imagens/logo2.png" alt="logo" width="50" height="45" class="d-inline-block">
+                    <img src="imagens/logo2.png" alt="logo" width="50" height="45" class="d-inline-block">
                     JobTeens
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -55,14 +55,14 @@
                 </div>
             </div>
             <div class="container py-5">
-                <h2>Tudo sobre Projetos & Cursos</h2>
+                <h2>Tudo sobre projetos e cursos</h2>
                 <article>
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="card mt-4 mb-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="/imagens/img_card_projeto_recode.png" class="img-card-projeto" alt="recode">
+                                        <img src="imagens/img_card_projeto_recode.png" class="img-card-projeto" alt="recode">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -88,7 +88,7 @@
                             <div class="card">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="/imagens/img_card_projeto_educarmais.png" class="img-card-projeto" alt="educarmais">
+                                        <img src="imagens/img_card_projeto_educarmais.png" class="img-card-projeto" alt="educarmais">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -114,7 +114,7 @@
                             <div class="card mt-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="/imagens/img_card_projeto_progavançar.png" class="img-card-projeto" alt="programaavançar">
+                                        <img src="imagens/img_card_projeto_progavançar.png" class="img-card-projeto" alt="programaavançar">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -140,7 +140,7 @@
                             <div class="card mt-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="/imagens/img_card_projeto_futurocerto.png" class="img-card-projeto" alt="futurocerto">
+                                        <img src="imagens/img_card_projeto_futurocerto.png" class="img-card-projeto" alt="futurocerto">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -166,7 +166,7 @@
                             <div class="card mt-3 mb-5">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="/imagens/img_card_projeto_agir.png" class="img-card-projeto" alt="agir">
+                                        <img src="imagens/img_card_projeto_agir.png" class="img-card-projeto" alt="agir">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
