--- a/projeto_site/sobre.html
+++ b/projeto_site/sobre.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-md bg-menu shadow">
             <div class="container-fluid">
                 <a class="navbar-brand color-text" href="index.html">
-                    <img src="/imagens/logo2.png" alt="logo" width="50" height="45" class="d-inline-block">
+                    <img src="imagens/logo2.png" alt="logo" width="50" height="45" class="d-inline-block">
                     JobTeens
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
