--- a/projeto_site/vagas.html
+++ b/projeto_site/vagas.html
@@ -12,6 +12,8 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="imagens/icon_logo_jobteens.ico" type="image/x-icon">
 </head>
 
 <body>
